--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -9,7 +9,7 @@
     --container-width: calc(var(--content-width) + (var(--container-padding) * 2));
 
     // font
-    --font-family: "fontFamily";
+    --font-family: "CoFoSans";
     --default-fz: 16px;
 
     // color main
