--- a/src/scss/partials/_popup.scss
+++ b/src/scss/partials/_popup.scss
@@ -1,11 +1,9 @@
 .modal {
     --transition-time: 0.3s;
     position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
+    inset: 0;
     z-index: 999;
+    display: flex;
     background-color: rgba(77, 82, 125, 0.4);
     cursor: pointer;
     overflow-y: auto;
@@ -13,20 +11,18 @@
     opacity: 0;
     visibility: hidden;
     transition: opacity var(--transition-time), visibility var(--transition-time);
-    text-align: center;
 
     &__container {
         position: relative;
         min-height: var(--vh);
-        vertical-align: middle;
         background-color: var(--white);
         cursor: default;
-        text-align: left;
         display: none;
         color: var(--dark);
         overflow: hidden;
+
         &.modal-open {
-            display: inline-block;
+            display: block;
         }
     }
 
@@ -42,45 +38,13 @@
         position: absolute;
         top: 0;
         right: 0;
+
         svg {
             width: 25px;
             height: 25px;
             stroke: var(--dark);
             stroke-width: 1.5px;
             transition: stroke $transitionSpeed $transitionFunction;
-
-            @media (max-width:$desktop) {
-                display: none;
-            }
-        }
-
-        span {
-            color: var(--blue);
-            font-size: var(--small-fz);
-            line-height: var(--small-lh);
-            font-weight: 500;
-
-            @media (min-width:$desktop) {
-                display: none;
-            }
-        }
-
-        @media (min-width:$desktop-min) {
-            &:hover {
-                svg {
-                    fill: var(--primary500);
-                }
-            }
-        }
-
-        @media (max-width:$desktop) {
-            right: 16px;
-            top: 24px;
-            width: auto;
-            height: auto;
-            position: absolute;
-            transform: translate(0);
-            margin: 0;
         }
     }
 
@@ -89,27 +53,24 @@
         visibility: visible;
         transition: opacity var(--transition-time), visibility var(--transition-time);
     }
-    &._center{
-        .modal{
 
-        }
-        .modal__container{
+    &._center {
+        .modal {}
+
+        .modal__container {
             min-height: auto;
-            margin: 50px auto;
+            margin: auto;
             max-width: 600px;
             width: 600px;
             padding: calc(50px + 12px) 32px 32px;
             border-radius: 12px;
+            @media (max-width:$smallTablet-max){
+                max-width: none;
+                width: 100%; 
+               margin: auto auto 0; 
+               border-radius: 12px 12px 0 0;
+            }
         }
-        &::before{
-            content: "";
-            display: inline-block;
-            vertical-align: middle;
-            height: 100%;
-        }
-    }
-    @media (max-width:$desktop) {
-        background-color: transparent;
     }
 }
 
