--- a/src/scss/ui-kit/_tooltip.scss
+++ b/src/scss/ui-kit/_tooltip.scss
@@ -1,58 +1,19 @@
-// .tooltip {
-//     position: relative;
-//     display: inline-block;
-
-//     &__btn {
-
-//         &:hover,
-//         &:focus {
-//             &+.tooltip__content {
-//                 opacity: 1;
-//                 visibility: visible;
-//                 transform: translateY(0);
-//             }
-//         }
-//     }
-
-//     &__content {
-//         position: absolute;
-//         left: 0;
-//         bottom: calc(100% + 5px);
-//         z-index: 3;
-//         padding: 7px 15px;
-//         width: max-content;
-//         max-width: 250px;
-//         box-shadow: 0 0 29px rgba(#000, 0.15);
-//         line-height: 200%;
-//         color: #fff;
-//         background-color: #000;
-//         opacity: 0;
-//         visibility: hidden;
-//         transform: translateY(10px);
-//         transition:
-//             opacity $transitionSpeed $transitionFunction,
-//             transform $transitionSpeed $transitionFunction,
-//             visibility $transitionSpeed $transitionFunction;
-//     }
-// }
-
-
 .tooltip-html {
     position: fixed;
-    padding: 15px;
-    border: 2px dashed #b3c9ce;
-    border-radius: 4px;
-    text-align: center;
-    color: #333;
-    background: #fff;
+    padding: 12px 16px;
+    font-size: 14px;
+    background-color: var(--white);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    border-radius: 10px;
+    color: var(--dark);
 
-    max-width: 400px;
+    max-width: 350px;
     width: max-content;
 
+    z-index: 1000;
     @media (max-width:$desktop) {
-        max-width: calc(100vw - 50px);
+        max-width: calc(100vw - 35px);
     }
-
 }
 
 .tooltip {
