--- a/src/html/partials/popups/create-task.html
+++ b/src/html/partials/popups/create-task.html
@@ -10,6 +10,9 @@
                 <label class="input-primary">
                     <input type="text" name="Имя" class="input-reset input-primary__input" data-field-name placeholder="Название">
                 </label>
+                <div class="textarea-primary mt-2 max-h-[400px]" data-textarea-min-height='80'>
+                    <textarea class="input-reset textarea-primary__textarea" maxlength='1000' data-field-descr placeholder="Описание"></textarea>
+                </div>
                 <label class="input-primary date-picker mt-2">
                     <input type="text" name="Имя" class="input-reset input-primary__input date-picker__input" data-field-date placeholder="Дата">
                 </label>
