--- a/src/scss/ui-kit/forms/_input.scss
+++ b/src/scss/ui-kit/forms/_input.scss
@@ -50,3 +50,21 @@ textarea.input-reset {
          }
     }
 }
+
+
+.textarea-primary{
+    display: block;
+    &__textarea{
+        height: 100%;
+        width: 100%;
+        display: block;
+       padding: 12px 16px;
+        border-radius: 12px;
+         @apply border-blue-300;
+         &:disabled{
+            opacity: 0.5;
+            pointer-events: none;
+         }
+
+    }
+}
