--- a/src/scss/partials/_popup.scss
+++ b/src/scss/partials/_popup.scss
@@ -69,6 +69,7 @@
                 width: 100%; 
                margin: auto auto 0; 
                border-radius: 12px 12px 0 0;
+               padding: calc(50px + 12px) 20px 32px;
             }
         }
     }
